# buildhat

./: .gitmodules  CMakeLists.txt  Makefile  README.md  mkrelease.sh
bhbl-pico/: CMakeLists.txt  LICENSE.txt  Makefile  bhbl.c  bhbl.ld  control.c  control.h  go-all  hardware.h  ioconv.c  ioconv.h  key.public.h  main.20210614.1533.elf  main.20210912.1645.elf  main.20210915.1209.elf  mkkeys.c  notes  ports.c  ports.h  reboot.s  sign.c  timer.c  timer.h  upload.c  version.h
docs/: protocol.md  signing.md
firmware/: .gitignore  Makefile  adc.c  adc.h  bhbl-startup.s  bhbl.c  command.c  common.h  control.c  control.h  core_cmSimd.h  device.c  flash-bl.sh  flash.sh  gpio.c  gpio.h  hardware.c  hardware.h  ioconv.h  leds.c  leds.h  main-startup.s  main.c  main.lnk  message.c  message.h  notes  ports.c  ports.h  pwm_pid.c  pwm_pid.h  reset.sh  system.c  system.h  tests.c  timer.c  timer.h  upload.c
firmware-pico/: CMakeLists.txt  command.c  command.h  common.h  control.c  control.h  debug.c  debug.h  device.c  device.h  go  go-all  hardware.c  hardware.h  ioconv.c  ioconv.h  leds.c  main.20210610.1453.elf  main.20210614.1533.elf  main.20221206.1322.elf  main.20221209.1434.elf  main.20230316.1515.elf  main.c  main.ld  message.c  message.h  notes  notes.txt  ports.c  ports.h  pwm_pid.c  pwm_pid.h  reboot.s  system.c  system.h  test-send.c  test.c  timer.c  timer.h  uart_rx.pio  (+1 more)
script/: CMakeLists.txt  mkkeys.c  sign.c
